# passgen

./: Cargo.toml  README.md  RELEASE.md  USAGE.md  WEB_README.md
.github/: actions.yml
.github/workflows/: release.yml
passgen/: .gitignore  CHANGELOG.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  install-universal.sh  install.sh  quick-install.sh
passgen/Formula/: passgen.rb
passgen/src/: utils.rs
src/: generator.rs  main.rs  utils.rs  web_main.rs
